--- a/app/src/main/res/layout/activity_online_game.xml
+++ b/app/src/main/res/layout/activity_online_game.xml
@@ -6,6 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".activity.PlaySoloActivity">
 
+
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBarLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/topAppBar"
+            style="@style/Widget.MaterialComponents.Toolbar.Surface"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:navigationIcon="@drawable/ic_baseline_arrow_back_24" />
+
+    </com.google.android.material.appbar.AppBarLayout>
     <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
@@ -13,7 +30,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="104dp"
         android:text="Tic Tac Toe"
-        android:textAppearance="@style/TextAppearance.TicTacToe.Title"
+        android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -61,10 +78,10 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginStart="28dp"
-        android:layout_marginBottom="168dp"
+        android:layout_marginBottom="216dp"
         android:background="?attr/colorControlHighlight"
         android:textSize="?android:attr/windowTitleSize"
-        app:layout_constraintBottom_toTopOf="@+id/buttonReset"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/button7"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -73,10 +90,10 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginEnd="28dp"
-        android:layout_marginBottom="168dp"
+        android:layout_marginBottom="216dp"
         android:background="?attr/colorControlHighlight"
         android:textSize="?android:attr/windowTitleSize"
-        app:layout_constraintBottom_toTopOf="@+id/buttonReset"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button7" />
 
@@ -99,10 +116,10 @@
         android:layout_height="101dp"
         android:layout_marginStart="14dp"
         android:layout_marginEnd="14dp"
-        android:layout_marginBottom="168dp"
+        android:layout_marginBottom="216dp"
         android:background="?attr/colorControlHighlight"
         android:textSize="?android:attr/windowTitleSize"
-        app:layout_constraintBottom_toTopOf="@+id/buttonReset"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/button8"
         app:layout_constraintStart_toEndOf="@+id/button6" />
 
@@ -130,17 +147,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button1" />
 
-
-    <Button
-        android:id="@+id/buttonReset"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-        android:text="Reset"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 
     <!--<ImageView
         android:id="@+id/imageViewGameOn"
