--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -100,14 +100,13 @@
 
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/create_account_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="132dp"
         android:layout_marginEnd="132dp"
         android:layout_marginBottom="61dp"
-        android:clickable="true"
-        android:focusable="true"
+        android:onClick="signUpButtonClick"
         android:text="@string/create_an_account"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -124,11 +123,10 @@
         android:background="@android:color/black"
         android:clickable="true"
         android:focusable="true"
-        android:onClick="createAccount"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/create_account_button" />
 
     <TextView
         android:id="@+id/forgot_password_textview"
@@ -141,14 +139,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/create_account_button" />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/abc_vector_test"
-        tools:layout_editor_absoluteX="19dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
