Implemented highscore feature where every draw is shown to the user when navigating ti the highscore tab.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,52 @@
     android:layout_height="match_parent"
     tools:context=".activity.MainActivity">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/highScoreContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/purple_500"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/highscore_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="36dp"
+            android:text="@string/highscore"
+            android:textAppearance="@style/TextAppearance.TicTacToe.HighScoreText"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/topAppBar" />
+
+        <TextView
+            android:id="@+id/highscore_draws"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="@string/draws"
+            android:textAppearance="@style/TextAppearance.TicTacToe.HighScoreText"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/highscore_title" />
+
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/topAppBar"
+            style="@style/Widget.MaterialComponents.Toolbar.Surface"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:menu="@menu/top_app_bar"
+            app:title="TicTacToe" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
@@ -15,15 +61,9 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/topAppBar"
-            style="@style/Widget.MaterialComponents.Toolbar.Surface"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            app:title="TicTacToe"
-            app:menu="@menu/top_app_bar" />
-
     </com.google.android.material.appbar.AppBarLayout>
+
+
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -32,6 +72,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:background="@color/colorPrimary"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -43,8 +84,8 @@
             android:layout_width="@dimen/game_button_size"
             android:layout_height="@dimen/game_button_size"
             android:layout_marginEnd="@dimen/game_button_spacing"
-            android:onClick="gameButtonClick"
             android:contentDescription="@string/app_name"
+            android:onClick="gameButtonClick"
             app:layout_constraintRight_toLeftOf="@+id/gameButton2"
             app:layout_constraintTop_toTopOf="@+id/gameButton2" />
 
@@ -133,8 +174,8 @@
             android:layout_width="@dimen/game_button_size"
             android:layout_height="@dimen/game_button_size"
             android:layout_marginStart="@dimen/game_button_spacing"
-            android:onClick="gameButtonClick"
             android:contentDescription="@string/app_name"
+            android:onClick="gameButtonClick"
             app:layout_constraintLeft_toRightOf="@+id/gameButton8"
             app:layout_constraintTop_toTopOf="@+id/gameButton8" />
 
@@ -146,8 +187,8 @@
         android:id="@+id/play_vs_friend_button"
         android:layout_width="160dp"
         android:layout_height="wrap_content"
-        android:text="@string/play_vs_friend"
         android:onClick="buttonClick"
+        android:text="@string/play_vs_friend"
         app:layout_constraintBottom_toTopOf="@+id/navigation_view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
